2015-10-15 Giuseppe Salamanna <salaman AT cern.ch>
	* ttHMultileptonLooseEventSaver: split lepton SF into trigger and others 
	
2015-10-15 Giuseppe Salamanna <salaman AT cern.ch>
	* TruthSelector: lowered pt cut to 1 GeV and checking against geant leptons
	
2015-10-15 David Hohn <dhohn@cern.ch>
	* change name: electron_truthOrig ->electron_truthOrigin, consistent with muons and taus

2015-10-13 Harish Potti <harish.potti@cern.ch>
	* added new GRL and IlumiCalc file

2015-10-12 David Hohn <dhohn@cern.ch>
	* added variable: total_leptons

2015-10-09 Giuseppe Salamanna <salaman AT cern.ch>
	* ttHMultileptonLooseEventSaver: added variable for muon match to HLT_mu18_mu8noL1
	* generic_config-*15.txt added corresponding string to check match

2015-10-09 David Hohn <dhohn@cern.ch>
	* move to Top,2.3.30
	  needed only minor interface changes
	  but had to switch off electron isolation sf calculation
	  and had to switch from VeryLoose to Loose muons because of missing scale factors
	* added tau scale factors, all equal 1 still for some reason

2015-10-05 Giuseppe Salamanna <salaman AT cern.ch>
	* Xsection13TeV_tth_bkg_v1.txt Added MG5+Py8 Z+jets xsections to the file

2015-10-01 Giuseppe Salamanna <salaman AT cern.ch>
	* ttHMultileptonLooseEventSaver: added variable for ele match to HLT_e24_lhmedium_iloose_L1EM18VH (see https://its.cern.ch/jira/browse/ATLASTTHML-13)
	Added HLT_mu18_mu8noL1 decision and PS. 
	* generic_config-mc15.txt added corresponding string to check match
	
2015-09-29 Harish Potti <harish.potti@utexas.edu>
	* data Added PURWTconfig files for 361500 and 361524
	* generic_config-mc15.txt Incorporated above files to the PURWT list
2015-09-27 Harish Potti <harish.potti@cern.ch>
	* data Added latest v65 grl and PRWLumiCalcFiles
	* generic_config-*15.txt Updated grl and PRWlumicalc file instructions
	
2015-09-20 Harish Potti <harish.potti@cern.ch>
	* data Added 25ns purwt config files