@@ -1,3 +1,7 @@
+2015-10-15 David Hohn <dhohn@cern.ch>
+	* Add DuplicateSelector to veto double events, enabled for data
+	* update data config for 2.3.30 as well
+
 2015-10-15 Giuseppe Salamanna <salaman AT cern.ch>
 	* ttHMultileptonLooseEventSaver: split lepton SF into trigger and others 
 	
